# handwritten-signature-recognition

./: api_test.ipynb  evaluation.ipynb  keep_awake.py  pyproject.toml
