[project]
name = "handwritten-signature-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"anthropic",
	"google-genai",
	"httpx",
	"levenshtein>=0.27.1",
	"openai",
	"pandas>=2.3.3",
	"pyautogui>=0.9.54",
	"python-dotenv",
]
